<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ConditioningRequirements" Id="{e586efbd-cfd1-4a3f-9987-c1ad09c5432d}">
    <Declaration><![CDATA[TYPE ST_ConditioningRequirements :
STRUCT
	by_PSCoolingPowerMode	:	BYTE;
	by_SetCooling			:	BYTE;
	Enclosure				:	eConditioningRequirement := 0;
	Battery					:	eConditioningRequirement := 0;
	Dehum					:	BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>